# tui-cat

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: main.rs  test.txt
src/components/: check_property.rs  mod.rs
src/ui/: draw.rs  events.rs  mod.rs  search_dir.rs  syntax.rs
